Alignment Fix

--- a/Proctor/css/Steps.css
+++ b/Proctor/css/Steps.css
@@ -1309,7 +1309,8 @@ p{
     border-width: 2px 2px;
 }
 .step10 .testDiv .c-table .smiley-img{
-    width: 35px;
+    width: 33px;
+    margin: 5px;
 }
 
 
